--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   ga('send', 'pageview');
 </script>
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+
+<link rel="icon" href="favicon.ico">
 <style>
 h1 {
   font-family: 'Lato', sans-serif;
